--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -37,6 +37,8 @@ jobs:
       run: |
         pip install buildozer==1.5.0
         pip install cython==0.29.33
+        pip install kivy==2.2.1
+        pip install pillow==10.0.0
         
     - name: Show buildozer version
       run: |
