--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -61,6 +61,11 @@ jobs:
         echo ""
         echo "Testing main.py import..."
         python3 -c "import main; print('Main.py imports successfully')"
+        echo ""
+        echo "Checking buildozer environment..."
+        echo "JAVA_HOME: $JAVA_HOME"
+        echo "ANDROID_HOME: $ANDROID_HOME"
+        echo "PATH includes buildozer: $(echo $PATH | grep buildozer || echo 'No buildozer in PATH')"
         
     - name: Build APK
       run: |
@@ -74,6 +79,10 @@ jobs:
         echo ""
         echo "Starting build..."
         buildozer android debug 2>&1 | tee build.log
+        echo ""
+        echo "Build completed. Exit code: $?"
+        echo "Last 50 lines of build log:"
+        tail -50 build.log
       continue-on-error: true
         
     - name: Check if APK was created
