Fix invalid buildozer command: Remove non-existent 'android check' command

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -50,8 +50,7 @@ jobs:
           buildozer init
         fi
         echo ""
-        echo "Validating buildozer configuration..."
-        buildozer android check
+        echo "Buildozer configuration file exists and is ready."
         
     - name: Show current directory contents
       run: |
